--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">The Basics of Motion Layout</string>
+    <string name="app_name">A Taste of MotionLayout</string>
 
     <string name="send_desc">send</string>
     <string name="convert_desc">convert</string>
